--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@types/node": "^16.7.8",
     "@types/react": "^17.0.19",
     "daisyui": "^1.14.0",
+    "dayjs": "^1.10.7",
     "gsap": "^3.7.1",
     "microcms-js-sdk": "^1.2.0",
     "next": "11.1.2",
     "next-transpile-modules": "^8.0.0",
     "react": "17.0.2",
+    "react-dayjs": "^0.3.2",
     "react-dom": "17.0.2",
     "react-fade-in": "^2.0.1",
+    "react-moment": "^1.1.1",
     "react-player": "^2.9.0",
     "react-transition-group": "^4.4.2",
+    "save": "^2.4.0",
     "styled-components": "^5.3.1",
     "swiper": "^7.0.5",
     "typescript": "^4.4.2"
